enum AccountTitle {
    case CASH_EQUIVALENT
    case ACCOUNT_RECEIVABLE
    case INVESTMENT
    case ACCOUNT_PAYABLE
    case RESERVE
    case LOAN
    case UTILITY
    case ACCRUED_EXPENSE
    case COMMON_STOCK
    case OWNER_DRAW
    case RETAINED_EARNING
    case UNLIALISED_GAIN
}