//Currency represened in ISO-4217
enum Currency {
    case JPY
    case USD
    case AUD
    case CNY
    case EUR
    case GBP
    case CAD
    case CHF
    case KRW
}
