enum Element {
    case ASSETS
    case LIABILITIES
    case EQUITIES
}
