enum TelegraphicTransfer {
    case TTS
    case TTM
    case TTB
}