enum Unit {
    case GRAM
    case STOCK
    case SHARE
}
